@@ -1,3 +1,12 @@
+2013-09-20  Willem Van Onsem  <vanonsem.willem@gmail.com>
+
+	* ZincOxide.csproj:
+	* ProgramResult.cs:
+	* EnumerableUtils.cs:
+	* EvaluationResult.cs:
+	* GeneratorVerbosity.cs:
+	* ReadWriteableUtils.cs: 
+
 2013-09-19  Willem Van Onsem  <vanonsem.willem@gmail.com>
 
 	* MiniZinc.cs:
